unpackaged/main/default/objects/Echo_Group__c/Echo_Group__c.object-meta.xml
<CustomObject>
    <label>Echo Group</label>
    <nameField>
        <label>Echo Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Echo Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>