unpackaged/main/default/objects/Echo_Group__c/fields/Active_Stores__c.field-meta.xml
<CustomField>
    <fullName>Active_Stores__c</fullName>
    <label>Active Stores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>