unpackaged/main/default/objects/Echo_Group__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Echo Groups</relationshipLabel>
    <relationshipName>Echo_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>