unpackaged/main/default/objects/Echo_Group__c/fields/Echo_Group_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Echo_Group_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Echo Group ID (18)</label>
    <type>Text</type>
</CustomField>