unpackaged/main/default/objects/Echo_Group__c/fields/Echo_Product__c.field-meta.xml
<CustomField>
    <fullName>Echo_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Echo Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Echo Groups</relationshipLabel>
    <relationshipName>Echo_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>