unpackaged/main/default/objects/Echo_Group__c/fields/Group_Contact__c.field-meta.xml
<CustomField>
    <fullName>Group_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Echo Groups (Group Contact)</relationshipLabel>
    <relationshipName>Echo_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>