unpackaged/main/default/objects/Echo_Group__c/fields/Group_List_Name_code__c.field-meta.xml
<CustomField>
    <fullName>Group_List_Name_code__c</fullName>
    <formula>Name &amp; &quot;: &quot; &amp; Group_Status__c &amp; &quot; (&quot; &amp; TEXT( Active_Store_Rollup__c ) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group List Name (code)</label>
    <type>Text</type>
</CustomField>