unpackaged/main/default/objects/Echo_Group__c/fields/Group_Status__c.field-meta.xml
<CustomField>
    <fullName>Group_Status__c</fullName>
    <formula>if(  Active_Store_Rollup__c  = 0, &quot;Group Inactive&quot;, &quot;Group Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Status</label>
    <type>Text</type>
</CustomField>