unpackaged/main/default/objects/Echo_Group__c/fields/Inactive_Store_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Store_Rollup__c</fullName>
    <label>Inactive Stores</label>
    <summaryFilterItems>
        <field>Echo_Store__c.Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </summaryFilterItems>
    <summaryForeignKey>Echo_Store__c.Echo_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>