unpackaged/main/default/objects/Echo_Group__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Echo Groups</relationshipLabel>
    <relationshipName>Echo_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>