unpackaged/main/default/objects/Echo_Group__c/fields/Ultimate_Parent_Account_code__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent Account (code)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Echo Groups (Ultimate Parent Account (code))</relationshipLabel>
    <relationshipName>Echo_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>